--- a/bUtility.Sts.MvcServer/Configuration/Debug/STS.config
+++ b/bUtility.Sts.MvcServer/Configuration/Debug/STS.config
@@ -4,14 +4,14 @@
     <rp name="test" tokenLifeTime="480" issuerName="simpleSTS@azure"
         redirectUrl="https://butilitystsclient.azurewebsites.net/sample/index"
         realm="https://butilitystsclient.azurewebsites.net/"
-        authenticationUrl="https://butilitystsserver.azurewebsites.net/Account/index/test"
+        authenticationUrl="https://localhost/bUtility.Sts.MvcServer/Account/index/test"
         tokenType="urn:oasis:names:tc:SAML:1.0:assertion">
       <embeddedSigningCertificate assemblyName="bUtility.Sts.MvcServer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" 
                                   resourceName="bUtility.Sts.MvcServer.certificates.issuer.model.local.pfx" password="123456"/>    </rp>
     <rp name="testLocal" tokenLifeTime="480" issuerName="simpleSTS@azure"
         redirectUrl="https://localhost/bUtility.Sts.MvcClient/sample/index"
         realm="https://localhost/bUtility.Sts.MvcClient/"
-        authenticationUrl="https://butilitystsserver.azurewebsites.net/Account/index/test"
+        authenticationUrl="https://localhost/bUtility.Sts.MvcServer/Account/index/test"
         tokenType="urn:oasis:names:tc:SAML:1.0:assertion">
       <embeddedSigningCertificate assemblyName="bUtility.Sts.MvcServer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"
                                   resourceName="bUtility.Sts.MvcServer.certificates.issuer.model.local.pfx" password="123456"/>
@@ -19,7 +19,7 @@
     <rp name="testApiLocal" tokenLifeTime="480" issuerName="simpleSTS@azure"
         redirectUrl="https://localhost/bUtility.Sts.ApiClient/"
         realm="https://localhost/bUtility.Sts.ApiClient/"
-        authenticationUrl="https://butilitystsserver.azurewebsites.net/Account/index/testApiLocal"
+        authenticationUrl="https://localhost/bUtility.Sts.MvcServer/Account/index/testApiLocal"
         tokenType="urn:oasis:names:tc:SAML:1.0:assertion">
       <embeddedSigningCertificate assemblyName="bUtility.Sts.MvcServer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"
                                   resourceName="bUtility.Sts.MvcServer.certificates.issuer.model.local.pfx" password="123456"/>
