--- a/bUtility.WebApi/bUtility.WebApi.csproj
+++ b/bUtility.WebApi/bUtility.WebApi.csproj
@@ -42,11 +42,14 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IdentityModel" />
+    <Reference Include="System.IdentityModel.Services" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
       <Private>True</Private>
@@ -59,6 +62,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="handlers\AuthenticationHandler.cs" />
+    <Compile Include="authorizationFilters\ClaimsAuthorizeAttribute.cs" />
     <Compile Include="NotFoundResolution\ActionSelector.cs" />
     <Compile Include="NotFoundResolution\ControllerSelector.cs" />
     <Compile Include="NotFoundResolution\ErrorController.cs" />
@@ -66,13 +71,15 @@
     <Compile Include="ReflectionExtensions.cs" />
     <Compile Include="IUserIDProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Filters\RegistryExceptionFilterAttribute.cs" />
+    <Compile Include="exceptionFilters\RegistryExceptionFilterAttribute.cs" />
     <Compile Include="Request.cs" />
     <Compile Include="RequestHeader.cs" />
-    <Compile Include="Filters\RequireHttpsAttribute.cs" />
+    <Compile Include="authorizationFilters\RequireHttpsAttribute.cs" />
     <Compile Include="Response.cs" />
     <Compile Include="SimpleRequest.cs" />
-    <Compile Include="Filters\ToLocalTimeFilterAttribute.cs" />
+    <Compile Include="actionFilters\ToLocalTimeFilterAttribute.cs" />
+    <Compile Include="handlers\ThrottlingHandler.cs" />
+    <Compile Include="handlers\ThrottlingException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -96,6 +103,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="bin\" />
+    <Folder Include="Filters\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
