--- a/bUtility.LRT.Sample/bUtility.LRT.Sample.csproj
+++ b/bUtility.LRT.Sample/bUtility.LRT.Sample.csproj
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>543fc04d-26fc-4665-9e55-fae44798c632</ProjectGuid>
+    <ProjectGuid>{543FC04D-26FC-4665-9E55-FAE44798C632}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>bUtility.LRT.Sample</RootNamespace>
@@ -30,25 +30,36 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System"/>
-    
-    <Reference Include="System.Core"/>
-    <Reference Include="System.Xml.Linq"/>
-    <Reference Include="System.Data.DataSetExtensions"/>
-    
-    
-    <Reference Include="Microsoft.CSharp"/>
-    
-    <Reference Include="System.Data"/>
-    
-    <Reference Include="System.Net.Http"/>
-    
-    <Reference Include="System.Xml"/>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="ISystem.cs" />
+    <Compile Include="Operation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="actions\System1Operation.cs" />
+    <Compile Include="actions\System2Operation.cs" />
+    <Compile Include="actions\System3Operation.cs" />
+    <Compile Include="types\System3Result.cs" />
+    <Compile Include="types\System1Result.cs" />
+    <Compile Include="types\System2Result.cs" />
+    <Compile Include="types\Request.cs" />
+    <Compile Include="types\ValidationResult.cs" />
+    <Compile Include="actions\Validation.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\bUtility.LRT\bUtility.LRT.csproj">
+      <Project>{B5516872-5810-45A2-B3B3-6445ED75CB3D}</Project>
+      <Name>bUtility.LRT</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
@@ -57,5 +68,4 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-
- </Project>
+</Project>
