--- a/bUtility.Sts.MvcServer/Configuration/Debug/STS.config
+++ b/bUtility.Sts.MvcServer/Configuration/Debug/STS.config
@@ -6,8 +6,9 @@
         realm="https://butilitystsclient.azurewebsites.net/"
         authenticationUrl="https://localhost/bUtility.Sts.MvcServer/Account/index/test"
         tokenType="urn:oasis:names:tc:SAML:1.0:assertion">
-      <embeddedSigningCertificate assemblyName="bUtility.Sts.MvcServer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" 
-                                  resourceName="bUtility.Sts.MvcServer.certificates.issuer.model.local.pfx" password="123456"/>    </rp>
+      <embeddedSigningCertificate assemblyName="bUtility.Sts.MvcServer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"
+                                  resourceName="bUtility.Sts.MvcServer.certificates.issuer.model.local.pfx" password="123456"/>
+    </rp>
     <rp name="testLocal" tokenLifeTime="480" issuerName="simpleSTS@azure"
         redirectUrl="https://localhost/bUtility.Sts.MvcClient/sample/index"
         realm="https://localhost/bUtility.Sts.MvcClient/"
@@ -37,6 +38,24 @@
         realm="https://myStsSampleApp/"
         authenticationUrl="https://localhost/bUtility.Sts.MvcServer/Account/index/testApiLocal"
         tokenType="urn:ietf:params:oauth:token-type:jwt">
+      <embeddedSigningCertificate assemblyName="bUtility.Sts.MvcServer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"
+                                  resourceName="bUtility.Sts.MvcServer.certificates.issuer.model.local.pfx" password="123456"/>
+    </rp>
+
+    <rp name="tokencacheapi" tokenLifeTime="480" issuerName="simpleSTS@azure"
+      redirectUrl="https://localhost/tokencacheapi/index/get"
+      realm="https://localhost/tokencacheapi/"
+      authenticationUrl="https://localhost/bUtility.Sts.MvcServer/Account/index/tokencacheapi"
+      tokenType="urn:oasis:names:tc:SAML:1.0:assertion">
+      <embeddedSigningCertificate assemblyName="bUtility.Sts.MvcServer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"
+                                  resourceName="bUtility.Sts.MvcServer.certificates.issuer.model.local.pfx" password="123456"/>
+    </rp>
+
+    <rp name="tokencacheclient" tokenLifeTime="480" issuerName="simpleSTS@azure"
+      redirectUrl="https://localhost/tokencacheclient/index/get"
+      realm="https://localhost/tokencacheclient/"
+      authenticationUrl="https://localhost/bUtility.Sts.MvcServer/Account/index/tokencacheclient"
+      tokenType="urn:oasis:names:tc:SAML:1.0:assertion">
       <embeddedSigningCertificate assemblyName="bUtility.Sts.MvcServer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"
                                   resourceName="bUtility.Sts.MvcServer.certificates.issuer.model.local.pfx" password="123456"/>
     </rp>
