--- a/bUtility.Sts.MvcServer/Configuration/Debug/STS.config
+++ b/bUtility.Sts.MvcServer/Configuration/Debug/STS.config
@@ -59,5 +59,13 @@
       <embeddedSigningCertificate assemblyName="bUtility.Sts.MvcServer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"
                                   resourceName="bUtility.Sts.MvcServer.certificates.issuer.model.local.pfx" password="123456"/>
     </rp>
+    <rp name="audithost" tokenLifeTime="480" issuerName="simpleSTS@azure"
+      redirectUrl="https://localhost/audithost/index/get"
+      realm="https://localhost/audithost/"
+      authenticationUrl="https://localhost/bUtility.Sts.MvcServer/Account/index/tokencacheclient"
+      tokenType="urn:oasis:names:tc:SAML:1.0:assertion">
+      <embeddedSigningCertificate assemblyName="bUtility.Sts.MvcServer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"
+                                  resourceName="bUtility.Sts.MvcServer.certificates.issuer.model.local.pfx" password="123456"/>
+    </rp>
   </relyingParties>
 </bUtility.Sts>
