--- a/bUtility.WebApi/bUtility.WebApi.csproj
+++ b/bUtility.WebApi/bUtility.WebApi.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="exceptionFilters\ExceptionHandlingAttribute.cs" />
     <Compile Include="handlers\AuthenticationHandler.cs" />
     <Compile Include="authorizationFilters\ClaimsAuthorizeAttribute.cs" />
     <Compile Include="NoCacheAttribute.cs" />
@@ -72,7 +73,6 @@
     <Compile Include="ReflectionExtensions.cs" />
     <Compile Include="IUserIDProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="exceptionFilters\RegistryExceptionFilterAttribute.cs" />
     <Compile Include="Request.cs" />
     <Compile Include="RequestHeader.cs" />
     <Compile Include="authorizationFilters\RequireHttpsAttribute.cs" />
@@ -82,6 +82,7 @@
     <Compile Include="handlers\ThrottlingHandler.cs" />
     <Compile Include="handlers\ThrottlingException.cs" />
     <Compile Include="stsClient\StsPostHandler.cs" />
+    <Compile Include="TestIndexController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -96,6 +97,10 @@
     <None Include="_CreateNewNuGetPackage\RunMeToUploadNuGetPackage.cmd" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\bUtility.Logging\bUtility.Logging.csproj">
+      <Project>{F1EB3EDC-9862-4879-845E-2836F52D694C}</Project>
+      <Name>bUtility.Logging</Name>
+    </ProjectReference>
     <ProjectReference Include="..\bUtility.Sts\bUtility.Sts.csproj">
       <Project>{93159ed4-1d44-40d2-a928-2cab3e234974}</Project>
       <Name>bUtility.Sts</Name>
