--- a/bUtility.ReverseProxy/bUtility.ReverseProxy.csproj
+++ b/bUtility.ReverseProxy/bUtility.ReverseProxy.csproj
@@ -52,7 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Proxy.cs" />
+    <Compile Include="ProxyHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
